--- a/cancelacion-matricula.html
+++ b/cancelacion-matricula.html
@@ -788,148 +788,49 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                Pagar la <b>universidad</b>
+                Cancelación de <b>matrícula</b>
               </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
               <p class="text-body mt-2">
-                A continuación te presentamos las diferentes formas de pagar la Universidad.
+                Esta gestión la debe realizar el alumno que deje de estudiar en esta Escuela Superior para no incurrir en mora, de esta manera estará solvente de pagos y podrá inscribirse sin problemas financieros al momento de volver a la formación académica.
               </p>
-              <blockquote class="p-3 bg-info text-secondary lh-base">
-                <b>Recuerde:</b><br>
-                <p>
-                  Los pagos de colegiaturas se deben efectuar por anticipado dentro de los primeros diez (10) días del mes.
-                </p>
-                <p class="mb-0">
-                  Si paga después del día diez (10) de cada mes, deberá cancelar una mora de
-                  Q.25.00 por mes, si es de grado; si se trata de posgrado, la mora será de Q.50.00 por mes.<br>
-                  Aplica multa de Q. 25.00 por cada evaluación a la que se someta estando insolvente.
+              <p>Debe estar solvente de pagos al realizar la cancelación de matrícula y debe realizar este proceso en las siguientes fechas:</p>
 
-                </p>
-              </blockquote>
+              <h2>Estudiantes de Pregrado (Licenciaturas)</h2>
               <p>
-                Existen tres maneras de pagar la Universidad:
-              </p>
-              <h2 class="display-4 lh-1">
-                1. <b>Desde la banca en línea de tu banco</b>
-              </h2>
-              <p class="mt-3">
-                Puedes realizar pagos en línea con los siguientes bancos del sistema a través de sus plataformas digitales.
-              </p>
+              En el primer semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de mayo, a partir del 01 de junio ya no puede realizar dicho trámite.
+            </p>
               <p>
-                Recuerda, debes contar con datos de acceso por parte de tu banco; si no es así, puedes solicitar con ellos directamente está información.
+                En el segundo semestre, el estudiante puede cancelar matrícula, tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite, hasta el 31 de octubre, a partir del 01 de noviembre ya no puede realizar dicho trámite.
               </p>
-              <ul class="list-unstyled ps-4 ff-Lato-bli fs-4 text-primary">
-                <li>
-                  Banco Industrial
-                </li>
-                <li>
-                  BAM
-                </li>
-                <li>
-                  G&T
-                </li>
-              </ul>
-              <p>
-                En la <b>"Sección de servicios”</b>, busca <b>Universidad Mariano Gálvez de Guatemala</b>, completa el formulario y selecciona el rubro correspondiente para realizar tu pago.
-              </p>
-              <h2 class="display-4 lh-1">
-                2. <b>En la agencia bancaria</b>
-              </h2>
-              <p class="mt-3">
-                Puedes imprimir tu boleta de pago desde la plataforma <a href="#" class="ff-Urbanist-bi text-decoration-none text-primary">MiUMG</a>, ingresando con tu <i class="ff-Urbanist-bi text-primary">usuario y contraseña</i> proporcionado por la Universidad. Busca el módulo de <a href="#" class="ff-Urbanist-bi text-decoration-none text-primary">Formas de pago</a> para generar el documento. Imprímelo y preséntalo en cualquier <b class="ff-Urbanist-bi">agencia del Banco Industrial, BAM o Banco GyT</b>.
-              </p>
-              <h2 class="display-4 lh-1">
-                3. <b>Por tarjeta de crédito o débito</b>
-              </h2>
-              <p class="mt-3">
-                Ahora contamos con la posibilidad de realizar pagos por medio de Tarjetas de crédito o débito.
-              </p>
-              <p>
-                A continuación deberás seguir los siguiente pasos.
-              </p>
-              <ul>
-                <li>
-                  Puedes usar este servicio, ingresando a MiUMG con tus datos o bien directamente desde acá.
-                </li>
-                  <li>
-                    Ingresar número de carné, posteriormente seleccionar:
-                  <ul>
-                    <b>
-                    <li>Tipo de pago</li>
-                    <li>Semestre/trimestre</li>
-                    <li>Año</li>
-                    <li>Mes</li></b>
-                  </ul>
-                <div class="card">
-                  <div class="card-body">
-                    <blockquote class="blockquote mb-0">
-                      <p>Nota:</p>
-                      <p>Si se trata de pago de colegiatura, deberá seleccionar el mes a cancelar. Para el caso de otros rubros, deberá seleccionar el mes actual.</p>
-                    </blockquote>
-                  </div>
-                </div>
-                <img src="#">
-              </li>
-              <li>
-                En el siguiente paso deberá cerciorarse que los datos mostrados son correctos; si la información es correcta, por favor seleccione la opción: <b>”Continuar”</b>
-                <br>
-                <img src="#">
-              </li>
-              <li>
-                Deberá ingresar los siguientes datos de contacto:
-                <ul>
-                  <li>Teléfono</li>
-                  <li>Correo electrónico</li>
-                  <li>Dirección de residencia: seleccionar departamento y municipio</li>
-                </ul>
-                <br>
-                El campo de código postal es requerido y se solicitará únicamente la primera vez que llene estos datos de contacto.
-                <br>
-                <img src="#">
-              </li>
-              <li>
-                A continuación se mostrará el monto a cancelar.<br>
-                Para efecto del cobro, ingrese la numeración de la tarjeta y el código CVV que se encuentra en la parte adversa de la misma. Coloque también los datos de fecha de expiración en mes y año.
-                <br>
-                <img src="#">
-                <br>
-                En caso de error en la transferencia, se mostrará en pantalla.
-                <br>
-                <img src="">
-              </li>
-              <li>
-                Confirmación de pago.<br>
-                Si los datos ingresados y la transacción se realizó con satisfacción, podrá observar la confirmación de pago.<br>
-                En la parte inferior, observará el botón de imprimir boleta.
-                <br>
-                <img src="#">
-              </li>
-              </ul>
-              <h2>Tarjeta de crédito/débito y cargo expreso</h2>
-              <p>
-                Cuando hagas el pago con tarjeta de crédito o débito para pagar un servicio como certificación de cursos, existe la posibilidad de enviártelo por cargo expreso. Al completar el proceso de pago, recibirás un correo electrónico con la confirmación y código de rastreo del paquete.
-                <br>
-                <img src="#">
-              </p>
-            </div>
-          </div>
-          
 
-
-
-          <div class="row">
-            <div class="col-12 col-sm-9 col-md-6 col-lg-4">
-              <div class="d-flex align-items-center mb-4 text-blue">
-                <i class="fi fi-rr-file-download me-2 fs-1 lh-1"></i>
-                <div class="ff-Lato-bli fs-6 fs-sm-5 lh-sm">
-                  Pasos para pago por medio de tarjeta de crédito o débito
-                </div>
-              </div>
-            </div>
-          </div>
+              <h2>Estudiantes de Posgrados</h2>
+              <p>
+                En cualquier fecha del trimestre vigente, el estudiante puede cancelar matrícula tomando en cuenta la solvencia de pagos de acuerdo a la fecha en la que esté realizando el trámite.
+              </p>
+              <h3>Proceso</h3>
+              <p>
+              Deberá de enviar un correo a tesoreria@umg.edu.gt dirigido al Departamento de Tesorería detallando: nombre completo y número de carnet, solicitando la cancelación de matrícula, este proceso no tiene ningún costo el único requisito que se solicita es que el estudiante se encuentre totalmente solvente en sus pagos, tomando en cuenta la fecha a partir de la cual está haciendo su solicitud.
+            </p>
+            <p>
+              <b>Más Información</b>
+              <br>
+              Departamento de Tesorería
+              <br>
+              Edificio “A”, 2do. Nivel, Oficina A-230
+              <br>
+              PBX: 2411-1800 Ext. 1206
+            </p>
+            <p>
+              <b>Horario de atención:</b>
+              <br>
+              Lunes a viernes de 7:00 a 20:30
+              <br>
+              Sábados de 7:00 a 12:00
+            </p>
         </div>
       </article>
 
