--- a/certificado-evaluacion-general-privada.html
+++ b/certificado-evaluacion-general-privada.html
@@ -788,149 +788,40 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                Pagar la <b>universidad</b>
+                Certificado de <b>Evaluación General Privada</b>
               </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p class="text-body mt-2">
-                A continuación te presentamos las diferentes formas de pagar la Universidad.
+              <p>
+                Los requisitos para obtención de la certificación de evaluación general privada aprobada o la exoneración de la misma según sea su caso.
               </p>
-              <blockquote class="p-3 bg-info text-secondary lh-base">
-                <b>Recuerde:</b><br>
-                <p>
-                  Los pagos de colegiaturas se deben efectuar por anticipado dentro de los primeros diez (10) días del mes.
+              <p>
+                <b>Para el pago de boleta código 393 de certificación de privado, por favor verificar en cualquiera de las siguientes opciones:</b>
                 </p>
-                <p class="mb-0">
-                  Si paga después del día diez (10) de cada mes, deberá cancelar una mora de
-                  Q.25.00 por mes, si es de grado; si se trata de posgrado, la mora será de Q.50.00 por mes.<br>
-                  Aplica multa de Q. 25.00 por cada evaluación a la que se someta estando insolvente.
-
-                </p>
-              </blockquote>
-              <p>
-                Existen tres maneras de pagar la Universidad:
-              </p>
-              <h2 class="display-4 lh-1">
-                1. <b>Desde la banca en línea de tu banco</b>
-              </h2>
-              <p class="mt-3">
-                Puedes realizar pagos en línea con los siguientes bancos del sistema a través de sus plataformas digitales.
-              </p>
-              <p>
-                Recuerda, debes contar con datos de acceso por parte de tu banco; si no es así, puedes solicitar con ellos directamente está información.
-              </p>
-              <ul class="list-unstyled ps-4 ff-Lato-bli fs-4 text-primary">
-                <li>
-                  Banco Industrial
-                </li>
-                <li>
-                  BAM
-                </li>
-                <li>
-                  G&T
-                </li>
-              </ul>
-              <p>
-                En la <b>"Sección de servicios”</b>, busca <b>Universidad Mariano Gálvez de Guatemala</b>, completa el formulario y selecciona el rubro correspondiente para realizar tu pago.
-              </p>
-              <h2 class="display-4 lh-1">
-                2. <b>En la agencia bancaria</b>
-              </h2>
-              <p class="mt-3">
-                Puedes imprimir tu boleta de pago desde la plataforma <a href="#" class="ff-Urbanist-bi text-decoration-none text-primary">MiUMG</a>, ingresando con tu <i class="ff-Urbanist-bi text-primary">usuario y contraseña</i> proporcionado por la Universidad. Busca el módulo de <a href="#" class="ff-Urbanist-bi text-decoration-none text-primary">Formas de pago</a> para generar el documento. Imprímelo y preséntalo en cualquier <b class="ff-Urbanist-bi">agencia del Banco Industrial, BAM o Banco GyT</b>.
-              </p>
-              <h2 class="display-4 lh-1">
-                3. <b>Por tarjeta de crédito o débito</b>
-              </h2>
-              <p class="mt-3">
-                Ahora contamos con la posibilidad de realizar pagos por medio de Tarjetas de crédito o débito.
-              </p>
-              <p>
-                A continuación deberás seguir los siguiente pasos.
-              </p>
-              <ul>
-                <li>
-                  Puedes usar este servicio, ingresando a MiUMG con tus datos o bien directamente desde acá.
-                </li>
-                  <li>
-                    Ingresar número de carné, posteriormente seleccionar:
-                  <ul>
-                    <b>
-                    <li>Tipo de pago</li>
-                    <li>Semestre/trimestre</li>
-                    <li>Año</li>
-                    <li>Mes</li></b>
-                  </ul>
-                <div class="card">
-                  <div class="card-body">
-                    <blockquote class="blockquote mb-0">
-                      <p>Nota:</p>
-                      <p>Si se trata de pago de colegiatura, deberá seleccionar el mes a cancelar. Para el caso de otros rubros, deberá seleccionar el mes actual.</p>
-                    </blockquote>
-                  </div>
-                </div>
-                <img src="#">
-              </li>
-              <li>
-                En el siguiente paso deberá cerciorarse que los datos mostrados son correctos; si la información es correcta, por favor seleccione la opción: <b>”Continuar”</b>
-                <br>
-                <img src="#">
-              </li>
-              <li>
-                Deberá ingresar los siguientes datos de contacto:
                 <ul>
-                  <li>Teléfono</li>
-                  <li>Correo electrónico</li>
-                  <li>Dirección de residencia: seleccionar departamento y municipio</li>
+                  <li>Ingresar al <a target="_blank" href="https://uvirtual.umg.edu.gt/pagos/">siguiente enlace</a>.</li>
+                  <li>O bien, consulta con el <a href="#">Centro Universitario</a> cercano para que te puedan brindar la boleta. (No, Campus Central).
+                  </li>
+                  <li>
+                    Ingresar a <a href="https://umg.edu.gt/miumg/">MiUMG</a> con tus Datos proporcionados por la Universidad. Busca el módulo de <b>"Efectuar pagos y generar formularios"</b>. Luego debes ir a: <i>"Generación de formularios de pago-> Acto de graduación -> Certificación de privado y Acto de graduación"</i>, completa el formulario seleccionando la opción, <b>”393 - Certificación de privado”</b> para generar el documento.
+                  </li>
                 </ul>
-                <br>
-                El campo de código postal es requerido y se solicitará únicamente la primera vez que llene estos datos de contacto.
-                <br>
-                <img src="#">
-              </li>
-              <li>
-                A continuación se mostrará el monto a cancelar.<br>
-                Para efecto del cobro, ingrese la numeración de la tarjeta y el código CVV que se encuentra en la parte adversa de la misma. Coloque también los datos de fecha de expiración en mes y año.
-                <br>
-                <img src="#">
-                <br>
-                En caso de error en la transferencia, se mostrará en pantalla.
-                <br>
-                <img src="">
-              </li>
-              <li>
-                Confirmación de pago.<br>
-                Si los datos ingresados y la transacción se realizó con satisfacción, podrá observar la confirmación de pago.<br>
-                En la parte inferior, observará el botón de imprimir boleta.
-                <br>
-                <img src="#">
-              </li>
-              </ul>
-              <h2>Tarjeta de crédito/débito y cargo expreso</h2>
-              <p>
-                Cuando hagas el pago con tarjeta de crédito o débito para pagar un servicio como certificación de cursos, existe la posibilidad de enviártelo por cargo expreso. Al completar el proceso de pago, recibirás un correo electrónico con la confirmación y código de rastreo del paquete.
-                <br>
-                <img src="#">
-              </p>
-            </div>
-          </div>
-          
-
-
-
-          <div class="row">
-            <div class="col-12 col-sm-9 col-md-6 col-lg-4">
-              <div class="d-flex align-items-center mb-4 text-blue">
-                <i class="fi fi-rr-file-download me-2 fs-1 lh-1"></i>
-                <div class="ff-Lato-bli fs-6 fs-sm-5 lh-sm">
-                  Pasos para pago por medio de tarjeta de crédito o débito
-                </div>
+                <p>Imprímelo y preséntalo en cualquier agencia del Banco Industrial, BAM o Banco G&T.</p>
+                <p>Cuando hayas completado el pago, debes enviar en un archivo PDF al correo sgcertificaciones@umg.edu.gt la siguiente información:</p>
+                <ul>
+                  <li>Nombres y apellidos completos.</li>
+                  <li>Número de carné.</li>
+                  <li>Carrera.</li>
+                  <li>Número telefónico.</li>
+                  <li>Fecha exacta de aprobación de privado, anotar las tres fechas de evaluación.</li>
+                  <li>Boleta de pago para certificación de privado, aprobado código 393.</li>
+                  <li>Copia DPI en alta resolución (por favor adjuntar en tamaño grande ya que debemos verificar las tildes de sus nombres y apellidos).</li>
+                  <li>Si su nombre o apellido es compuesto, ejemplo: DE LA ROSA, DEL VALLE, DE LOS ÁNGELES, DE LA CRUZ, deberá enviar copia de certificación de nacimiento.</li>
+                </ul>
+                <p>De la Secretaría General, recibirá indicaciones para los siguientes pasos.</p>
               </div>
-            </div>
-          </div>
-        </div>
       </article>
 
       <footer class="position-relative overflow-x-hidden pt-5 pb-4 pt-sm-6 pt-md-7 pt-lg-8">
